# bpp

./: .autoenv.zsh  .bumpversion.cfg  .coveragerc  .django-bpp-settings.local.rc  .dockerignore  .env.docker  .env.docker.ssl.example  .env.example  .gitattributes  .gitignore  .hgignore  .isort.cfg  .pre-commit-config.yaml  .test_durations  .travis.yml  AGENTS.md  AUTHORS.rst  AUTHORS.txt  BUGS.txt  CLAUDE.md  CLAUDE_CLOUD.md  CONTRIBUTING.rst  DEVELOPMENT_WORKFLOW.md  DOCKERHUB.md  DOCKER_IMAGE_ANALYSIS.md  Dockerfile  Dockerfile-build  Dockerfile-test  GEMINI.md  Gruntfile.js  HISTORY.md  HISTORY.rst  INSTALL.txt  LICENSE  MANIFEST.in  Makefile  Makefile.docker  Makefile.production  PLAN.txt  POMYSLY.txt  (+61 more)
.circleci/: config.yml
.claude/: settings.json  settings.local.json
.docker/: Dockerfile-db  Dockerfile-nginx  Dockerfile-prod  prod-entrypoint.sh  pytest.ini  test_run.sh  test_shell.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.pip-cache/: README
.travis/: nginx.conf.patch  pytest.ini  stellar.yaml
WIP-test-conversion-selenium-to-playwright/: prompt.txt  selenium_tests_converted.txt  selenium_tests_sorted_by_length.txt
ansible/: demo-vm.yml  hosts.cfg  playbook-db.yml  provision-db.yml  provision.yml  staging.yml  webserver.yml
baseline/: README.md  baseline.meta.json  baseline.sql  check_freshness.py  load_baseline.py  write_meta.py
baseline-sql/: README.md  baseline.meta.json  baseline.sql
bpp/: apps.py  autocomplete_light_registry.py  context_processors.py  migration_util.py  multiseek_registry.py  system.py  tasks.py  testutil.py  urls.py  util.py
buildscripts/: build-assets.sh  build-deps.sh  build-js-css-html.sh  build-release.sh  build-src.sh  build-wheel.sh  prepare-build-env.sh  run-tests.sh  wheels.build.sh  wheels.install.sh
components/: bower.json
deploy/: Dockerfile.appserver  Dockerfile.db  SSL_README.md  nginx_http.conf  nginx_https.conf  ssl-setup.sh
deployment/: Vagrantfile  build-release.sh  build-wheels.sh  install-osx.sh  install-ubuntu-dev.sh  install.sh  prepare-build-env.sh  run-tests.sh  wheels.build.sh  wheels.install.sh
django-live-operations/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
django-live-operations/docs/: api-reference.md  architecture.md  concepts.md  deployment.md  getting-started.md  index.md  security.md  stages-and-chaining.md  testing.md  text-mode.md  tutorial.md
django-live-operations/example/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
django-live-operations/example/demo/: forms.py  models.py  urls.py  views.py
django-live-operations/example/demo/management/commands/: seed_demo.py
django-live-operations/example/demo/migrations/: 0001_initial.py
django-live-operations/example/demo/templates/: base.html
django-live-operations/example/demo/templates/demo/: demoimport_create.html  demoimport_result.html
django-live-operations/example/demo_project/: asgi.py  celery.py  settings.py  urls.py
django-live-operations/live_operations/: __init__.py  apps.py  conf.py  consumers.py  models.py  naming.py  progress.py  rendering.py  routing.py  runner.py  security.py  urls.py  views.py
django-live-operations/live_operations/management/commands/: run_liveop.py
django-live-operations/live_operations/static/live_operations/: live-operations.js
django-live-operations/live_operations/templates/live_operations/: _cancelled.html  _error.html  _live_operation.html  _log_line.html  _progress.html  _regions.html  _result.html  _stages.html  _status.html  operation.html  operation_list.html
django-live-operations/live_operations/templatetags/: live_operations.py
django-live-operations/tests/: conftest.py  models.py  root_urls.py  settings.py  test_chain.py  test_consumer.py  test_models.py  test_naming.py  test_progress_text.py  test_progress_web.py  test_roundtrip.py  test_run_liveop.py  test_runner.py  test_security.py  test_seed_demo.py  test_smoke.py  test_stages.py  test_static_js.py  test_templatetag.py  test_views.py  urls.py  views.py
django-live-operations/tests/migrations/: 0001_initial.py  0002_add_stage_chain_models.py
django-live-operations/tests/templates/: base.html
django-live-operations/tests/templates/tests/: demoop_form.html
django_bpp/: celery.py  dashboard.py  local_settings.py.template  menu.py  settings.py  urls.py  version.py  wsgi.py
docker/: 30detectproxy  Dockerfile-circleci-python  Dockerfile-circleci-python-3.6-node-browsers-nginx-http-push  Dockerfile-circleci-python-3.7-node-browsers-nginx-http-push  Dockerfile-db  Dockerfile-db-11  Dockerfile-db-psql10  Dockerfile-db-psql12  Dockerfile-db-psql15  Dockerfile-nginx  Dockerfile-node  Dockerfile-prod  Dockerfile-python  Dockerfile-test  Dockerfile-web  Makefile  README  db-entrypoint.sh  default  detect-http-proxy  env.prod.txt  env.test.txt  env.web.txt  nginx-entrypoint.sh  nginx.conf  prod-entrypoint.sh  test_shell.sh  updateConfig.sh
docs/: CHANNELS_BROADCAST_FLAKE.md  CODEBASE_MAP.md  COMMANDS.md  DJANGO_5_2_UPGRADE.md  Makefile  SECURITY.md  SECURITY_PRACTICES.md  TAILWIND_MIGRATION.md  advanced.md  advanced.rst  api.md  api.rst  authors.md  conf.py  edycja_autor.md  edycja_autor.rst  edycja_jednostka.md  edycja_jednostka.rst  edycja_uczelnia.md  edycja_uczelnia.rst  edycja_wydawnictwo.md  edycja_wydawnictwo.rst  faq.rst  history.md  import_pracownikow.md  import_pracownikow.rst  importer_publikacji.md  importer_publikacji.rst  index.md  index.rst  instalacja_ansible.rst  installation.rst  konfiguracja_pbn.rst  konfiguracja_ssl.rst  make.bat  pbn-wysylka-plan.md  pbn.rst  raporty_rankingi.md  raporty_rankingi.rst  readme.md  (+12 more)
functional_tests/: test_bpp_with_notifications.py  test_cache.py  test_conftest.py
notifications/: __init__.py  context_processors.py  middleware.py
oaimarc/: setup.py
provisioning/: add-swap.sh  apt-fresh.sh  build.sh  checkout.sh  git.sh  locale.sh  macosx.sh  master-post-file.sh  master.sh  pip.sh  postgresql-open-wide.sh  postgresql-optimized.conf  python.sh  staging.sh  (+9 more)
(+6474 files in other folders)
