[project]
name = "bpp_iplweb"
version = "202510.1245"
description = ""
authors = [
    { name = "Michał Pasternak", email = "michal.dtz@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "Django>=4.2.25,<4.3",
    "arrow==1.2.1",
    "numpy>=2.1.2",
    "pygad>=3.3.1",
    "django-denorm-iplweb>=1.5.0",
    "django-tabular-permissions==2.9.1",
    "simplejson==3.17.5",
    "django-reversion==5.0.4",
    "channels[daphne]>=4,<5",
    "uvicorn[standard]>=0.31.0",
    "channels-redis>=4,<5",
    "django-flexible-reports>0.2.9",
    "django-group-by==0.3.1",
    "django-columns==0.1.0",
    "tablib==3.5.0",
    "openpyxl>=3.1.5",
    "django-dirtyfields==1.3.1",
    "django-messages-extends==0.6.3",
    "django-autoslug==1.9.8",
    "django-autocomplete-light==3.9.4",
    "django-admin-tools==0.9.2",
    "xlrd==2.0.1",
    "celery>=5.5.3",
    "django-celery-results==2.6.0",
    "django-tables2==2.3.1",
    "django-sendfile2>=0.7.2",
    "Unidecode==0.4.20",
    "django-cookie-law==2.2.0",
    "django-classy-tags==4.0.0",
    "pyoai==2.5.0",
    "django-crispy-forms==2.0.0",
    "crispy-forms-foundation==1.0.1",
    "django-compressor==4.4",
    "bleach>=3.3.0",
    "django-session-security>=2.6.7",
    "django-password-policies-iplweb==0.8.5",
    "dj-pagination==2.4.0",
    "requests>=2.32.4",
    "django-extensions==3.1.3",
    "django-htmlmin==0.11.0",
    "Pillow>=10,<11",
    "olefile==0.44",
    "django-grappelli==3.0.6",
    "django-multiseek==0.9.47",
    "django-braces>=1.15.0",
    "django-loginas==0.3.11",
    "django-webmaster-verification==0.4.3",
    "django-favicon-plus-reloaded==1.1.6",
    "django-querysetsequence==0.12",
    "pypandoc==1.5",
    "django-static-sitemaps>=5.0.0",
    "django-model-utils==4.3.1",
    "django-fsm==2.8.0",
    "django-mptt==0.13.4",
    "wosclient==0.1.5",
    "MOAI-iplweb==2.0.0",
    "django_redis==5.3.0",
    "django-filter==21.1",
    "dbfread>=2.0.7",
    "djangorestframework==3.15.2",
    "Markdown==3.2.1",
    "django-admin-sortable2>=2,<3",
    "cssmin==0.2.0",
    "rjsmin==1.2.1",
    "django-import-export==3.2.0",
    "pymed-iplweb==0.8.10",
    "django-taggit==4.0.0",
    "weasyprint==55.0",
    "requests-oauthlib==1.3.0",
    "django-cacheops==7.0.2",
    "djangoql==0.18.1",
    "django-weasyprint>=2.1.0",
    "django-templated-email>=3.0.0",
    "django-formtools==2.3",
    "pathspec>=0.9.0",
    "django-environ>=0.9.0",
    "django-celery-email>=3.0.0",
    "django-easy-audit>=1.3.3",
    "crossrefapi>=1.7.0",
    "pandas>=2.2.3",
    "django-tinymce>=4.1.0",
    "crispy-bootstrap5>=0.7",
    "crispy-bootstrap3>=2022.1",
    "twisted[http2,tls]>=24.3.0",
    "psycopg2>=2.9.9",
    "django-dbtemplates>=4.0",
    "django-soft-delete>=1.0.15",
    "tqdm>=4.67.1",
    "isbnlib>=3.10.14",
    "chardet>=5.2.0",
    "python-dateutil>=2.9.0.post0",
    "thefuzz>=0.22.1",
    "celery-singleton>=0.3.1",
    "rollbar>=1.3.0",
    "django-prometheus>=2.4.1",
    "logfire[django,psycopg2,celery]>=4.13.0"
]

[project.optional-dependencies]
ldap = ["django-auth-ldap>=4.1.0"]
office365 = ["django-microsoft-auth>=3.0.1"]
dev = [
    "bumpver>=2023.1124",
    "pytest-recording>=0.12.1",
    "vcrpy==4.4.0",
    "towncrier>=22.8.0",
    "pytest-sugar>=0.9.7",
    "pytest-rerunfailures>=14.0",
    "django-debug-toolbar>=4.4.6",
    "watchdog>=5.0.3",
    "model-bakery>=1.20.5",
    "django-dynamic-fixture>=1.8.0",
    "mock==2.0.0",
    "django-webtest==1.9.10",
    "beautifulsoup4>=4.6.0",
    "WebTest==3.0.0",
    "Sphinx==5.0.2",
    "coveralls>=4,<5",
    "psutil>=5.6.6",
    "pytest<8.0.0",
    "pytest-django>=4.4.0",
    "pytest-httpserver>=1.0.8",
    "pytest-cov>=2.10.1",
    "splinter>=0.15.0",
    "pytest-splinter>=3.3.1",
    "selenium>=3.141.0",
    "pytest-mock>=3.7.0",
    "pytest-xdist>=2.3.0",
    "pytest-lazy-fixture>=0.6.3",
    "pytest-timeout>=2.1.0",
    "pyparsing>=2.4.1.1",
    "ruff>=0.6.9",
    "typing>=3.6,<3.7",
    "pre-commit>=3.5.0",
    "twine>=5.1.0",
    "PyPDF2>=1.27.7",
    "ipdb>=0.13.9",
    "ipython>=8.2.0",
    "playwright>=1.41.0",
    "pytest-playwright>=0.4.0",
    "pytest-env>=1",
    "nest-asyncio>=1.6.0"
]

[project.scripts]
"bpp-manage.py" = "django_bpp.manage_command:entry_point"

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "api_v1",
    "bpp",
    "create_test_db",
    "crossref_bpp",
    "dynamic_columns",
    "django_bpp",
    "ewaluacja2021",
    "fixtures",
    "formdefaults",
    "import_common",
    "import_dyscyplin",
    "import_list_if",
    "import_pracownikow",
    "integrator2",
    "komparator_pbn",
    "zglos_publikacje",
    "long_running",
    "miniblog",
    "notifications",
    "nowe_raporty",
    "oswiadczenia",
    "pbn_api",
    "pbn_export_queue",
    "raport_slotow",
    "ranking_autorow",
    "rozbieznosci_dyscyplin",
    "rozbieznosci_if",
    "tee",
    "test_bpp"
]

[tool.setuptools.package-data]
"*" = [
    "static/**/*",
    "locale/**/*.mo",
    "locale/**/*.po",
    "migrations/*.sql",
    "migrations/*.txt",
    "fixtures/*",
    "fixtures/*.json"
]

[tool.bumpver]
current_version = "v202510.1245"
version_pattern = "vYYYY0M.BUILD[-TAGNUM][GITHASH]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"',
    'version = "{pep440_version}"']
"setup.py" = ['version="{pep440_version}",']
"src/django_bpp/version.py" = ['VERSION = "{pep440_version}"']
"package.json" = ['"version": "{version}",']
"Makefile" = [ 'DOCKER_VERSION="{pep440_version}"' ]




[tool.ruff]
line-length = 80
target-version = "py310"
extend-exclude = [
    "src/*/migrations/*",
    "src/import_list_if/tests",
    "src/nowe_raporty/tests",
    "src/api_v1/tests",
    "src/import_dyscyplin/tests",
    "src/crossref_bpp/tests",
    "src/raport_slotow/tests",
    "src/pbn_api/tests",
    "src/pbn_export_queue/tests",
    "src/bpp/tests",
    "src/formdefaults/tests",
    "src/zglos_publikacje/tests",
    "src/import_common/tests",
    "src/django_bpp/staticroot/notifications/js/tests",
    "src/long_running/tests",
    "src/ewaluacja2021/tests",
    "src/import_pracownikow/tests",
    "src/import_dbf/tests",
    "src/notifications/tests",
    "src/notifications/static/notifications/js/tests",
    "src/integrator2/tests",
    "src/fixtures"
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C90", "DJ"]
ignore = ["E501", "B008", "DJ008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["bpp", "django_bpp"]
split-on-trailing-comma = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.towncrier]
package = "bpp"
version = "202510.1245"
package_dir = "src"
filename = "HISTORY.rst"

[[tool.towncrier.type]]
directory = "bugfix"
showcontent = true
name = "Naprawione"

[[tool.towncrier.type]]
directory = "doc"
showcontent = true
name = "Dokumentacja"


[[tool.towncrier.type]]
directory = "feature"
showcontent = true
name = "Usprawnienie"


[[tool.towncrier.type]]
directory = "removal"
showcontent = true
name = "Usunięto"
